--- a/src/app.css
+++ b/src/app.css
@@ -75,6 +75,15 @@ body {
   background-color: var(--pt-bg-purple-darker);
 }
 
+body::after {
+  content: '';
+  position: fixed;
+  inset: 0;
+  background-image: url("data:image/svg+xml,<svg id='patternId' width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><defs><pattern id='a' patternUnits='userSpaceOnUse' width='30' height='52' patternTransform='scale(3) rotate(0)'><rect x='0' y='0' width='100%' height='100%' fill='hsla(262, 86%, 16%, 1)'/><path d='M0 0v17.34L15 26a10.02 10.02 0 0 0 0 17.34L30 52V34.66L15 26a10.02 10.02 0 0 0 .3-17.16zm30 0a10.02 10.02 0 0 0 0 17.34zM0 34.66V52a10.02 10.02 0 0 0 .3-17.16Z'  stroke-width='1' stroke='none' fill='hsla(262, 79%, 22%, 1)'/><path d='M0 0a10 10 0 0 0 15 8.67A9.97 9.97 0 0 1 19.97 0H10A9.98 9.98 0 0 1 0 0Zm30 0v.15ZM4.98 15.98A10 10 0 0 0 0 17.32l-1.1 8.76L0 34.67A10 10 0 0 1 15 26 10 10 0 0 0 4.98 16ZM30 17.32A10 10 0 0 1 15 26a10 10 0 0 0 15 8.67l1.64-7.4zM19.97 41.98A10 10 0 0 0 15 43.32 10 10 0 0 1 10 52h9.97A10 10 0 0 1 30 52a10 10 0 0 0-10.03-10.02Z'  stroke-width='1' stroke='none' fill='hsla(263, 44%, 41%, 1)'/></pattern></defs><rect width='800%' height='800%' transform='translate(0,0)' fill='url(%23a)'/></svg>");
+  opacity: 0.25;
+  z-index: -1;
+}
+
 body > div {
   min-width: 100vw;
 }
