tooltips on points

--- a/src/app.css
+++ b/src/app.css
@@ -60,6 +60,7 @@
   --pt-bg-purple-darker: #21064e;
   --pt-warning-light: #ffb6b6;
   --pt-warning-dark: #8b0000;
+  --pt-success: #90ee90;
   --pt-gold: #ffb636;
   --pt-transparent: #f5f0ff1a;
 }
