--- a/src/app.css
+++ b/src/app.css
@@ -74,6 +74,7 @@ body {
   margin: 0;
   color: var(--pt-purple-50);
   background-color: var(--pt-bg-purple-darker);
+  overflow-x: hidden;
 }
 
 body::after {
